src/style.scss
$background: rgb(246, 79, 67);
$accent: rgb(54, 43, 198);
$text-hover: white;


body, html {
  font-family: "Roboto", slab;
  background: $background;
  height: 100%;
  color: $accent;
  margin: 0;
}
button {
  background: none;
  border: none;
}

// nav bar
nav {
  background: $accent;
  margin: 0;
  width: 100%;
  height: 5vh;
}
nav ul {
  margin: 0;
  list-style-type: none;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}
nav li {
  margin: 2%;
  font-weight: 900;
  font-size: 18pt;
}
nav li:hover {
  font-size: 19pt;
  transition: ease .5s;
}
nav a {
  text-decoration: none;
  color: $background;
}
.active {
  color: $text-hover;
}

.post {
  // display: flex;
  // flex-direction: column;
  // box-shadow: 2px 5px 5px grey;
  border: 3pt;
  // margin: 5%;
  // padding: 2pt 10pt 2pt 10pt;
  background-color: $background;
  width: 100%;
  max-height: 40vh;
  overflow: hidden;
}

.post img { 
  position: relative;
  top: -40vh; 
  width: 105%; 
  margin: 0;
  margin-left: -2%;
  z-index: 0;
  filter: blur(7px); // from: https://www.w3schools.com/howto/howto_css_blurred_background.asp
}

.post-header {
  position: relative;
  top: 6vh;
  right: -10%;
  width: 80%;
  height: 28vh;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  background-color: rgba($background, .2);
  // border-style: solid;
  // border-color: grey;
  border-width: thin;
  z-index: 1; 
}

button {
  background: none;
  border: none;
  font-size: 24pt;
  color: $accent;
}


button:hover {
  color: $text-hover;
  transition: ease .5s;
}

i:hover {
  color: $text-hover;
  transition: ease .5s;
}

.full-post {
  height: 95vh;
  width: 101%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.post-header-full {
  width: 100%;
  height: 30vh;
  overflow: hidden;
  display: flex; 
  flex-flow: row wrap; 
  align-items: center;
  justify-content: center;
}
.post-header-full div {
  height: 0; 
  width: 100%;
  align-self: flex-start;
}
.post-header-full img {
  width: 100%;
}
.post-header-full h4 {
  color: $accent;
  font-size: 24pt;
  font-weight: 700;
  background: rgba($background, .6);
  padding: 5% 8%;
}
.post-body {
  text-align: left; 
  margin: 0 10%;
}
.tags-content {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  text-align: center;
  color: $accent;
  margin: 5% 0;
}

.buttons i:first-child {
  position: absolute;
  bottom: 2.5vh;
  left: 2.5vh;
  color: $accent;
  // display: flex;
  // flex-direction: row;
  // justify-content: space-between;
  // margin: 3% 3%;
}
.buttons i:last-child {
  position: absolute;
  bottom: 2.5vh;
  right: 2.5vh;
  color: $accent;
  // display: flex;
  // flex-direction: row;
  // justify-content: space-between;
  // margin: 3% 3%;
}
.buttons i:hover {
  color: $text-hover;
}

.post-main {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 2%;
}

i {
  margin: 6pt;
}

input {
  margin: 2%;
}

textarea {
  margin: 2%;
  border-style: solid;
  border-width: 0 0 1px 0;
  border-color: $accent;
  background-color: rgba($background, .8);
  font-size: 12pt;
  color: $accent;
  width: 80%;
  height: 5vh;
}
.tags-content textarea:last-of-type {
  height: 30vh;
}

textarea::placeholder {
  color: $text-hover;
}

